<resources>
    <string name="app_name">Klientutvecklingsprojekt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">HThis is dice fragment</string>
    <string name="board">Board</string>
    <string name="soccer_nav_button">Soccer</string>
    <string name="start_button">Board</string>
    <string name="nickname">Nickname</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_valid_user_name">Enter valid user name</string>
    <string name="choose_character">Choose Character</string>
    <string name="confirm">Confirm</string>
    <string name="choose_your_name_and_character">Choose your name and character</string>
    <string name="please_enter_game_id">Please enter game ID</string>
    <string name="please_enter_valid_game_id">Please enter valid game ID</string>
    <string name="gavle_roulette_nav_button">Gavle roulette</string>
    <string name="player_info_nav_button">Online(håller på och fixar här så gör inget dumt)</string>
    <string name="start_game">Start Game</string>
    <string name="game_name">Space Party</string>
    <string name="play_offline">Play Offline</string>
    <string name="or">Or</string>
    <string name="create_game_oline">Create Game Online</string>
    <string name="enter_game_id">Enter game ID</string>
    <string name="join_online_game">Join Online Game</string>
    <string name="game_ID">Game ID:</string>
    <string name="game_is_full">Game is full</string>
    <string name="play_online">play online</string>
    <string name="press_the_character">Press the character you want to challange?</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">number 2</string>
    <string name="number_3">number 3</string>
    <string name="number_4">number 4</string>
    <string name="number_5">number 5</string>
</resources>