<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".playerinfo.PlayerInfoFragment">


    <TextView
        android:id="@+id/game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="#6AFF00"
        android:layout_margin="8dp"
        android:padding="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_name_and_character"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="#6AFF00"
        android:layout_margin="8dp"
        android:padding="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textColor="#6AFF00"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:padding="8dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nickname_input"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#6AFF00"
        android:inputType="text"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:hint="@string/enter_user_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_character"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:textColor="#6AFF00"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:padding="8dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/astro_white"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/astro_white_free"/>

                <ImageView
                    android:id="@+id/astro_red"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/astro_red_free"/>

                <ImageView
                    android:id="@+id/astro_blue"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/astro_blue_free"/>

                <ImageView
                 android:id="@+id/astro_green"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/astro_green_free"/>

                <ImageView
                    android:id="@+id/astro_yellow"
                    android:layout_width="30dp"
                    android:layout_height="70dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/astro_yellow_free"/>

            </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_btn_white"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_btn_red"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_btn_blue"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_btn_green"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio_btn_yellow"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </GridLayout>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_btn"
        android:text="@string/confirm"
        android:layout_margin="8dp"
        android:padding="8dp"/>
</LinearLayout>